# lang-perf

./: .gitignore  README.md  docker-compose.yaml
cpp-app/: .gitignore  CMakeLists.txt  Dockerfile  README.md  main.cc
cpp-app/controllers/: cpp_app_devices.cc  cpp_app_devices.h
cpp-app/deploy/: deployment.yaml  ingress.yaml  service.yaml
cpp-app/models/: model.json
cs-app/: Dockerfile
cs-app/Controllers/: DeviceController.cs
cs-app/deploy/: deployment.yaml  service.yaml
dashboards/: latency.json  saturation.json
go-app/: go.mod  go.sum  main.go
go-app/deploy/: deployment.yaml
prometheus-operator-crd/: alertmanagerconfigs.yaml
rust-app/: Cargo.toml  Dockerfile
rust-app/deploy/: deployment.yaml
rust-app/src/: main.rs
terraform/: .terraform.lock.hcl  00-provider.tf  03-subnets.tf  04-nat.tf  05-routes.tf  06-eks.tf  07-nodes.tf  12-helm-nginx-ingress.tf  terraform.tfstate
